apps/nautobot/server/deployment.yaml
# Source: nautobot/templates/nautobot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nautobot
  labels:
    app.kubernetes.io/name: nautobot
    helm.sh/chart: nautobot-3.1.1
    app.kubernetes.io/instance: nautobot
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "3.0"
    app.kubernetes.io/component: nautobot-server
  annotations:
    secret.reloader.stakater.com/reload: "nautobot-env-secret"
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: nautobot
      app.kubernetes.io/instance: nautobot
      app.kubernetes.io/component: nautobot-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nautobot
        helm.sh/chart: nautobot-3.1.1
        app.kubernetes.io/instance: nautobot
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: "3.0"
        app.kubernetes.io/component: nautobot-server
    spec:
      serviceAccountName: nautobot

      affinity:
        # podAffinity:

        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: nautobot
                    app.kubernetes.io/name: nautobot
                    app.kubernetes.io/component: nautobot-server
                topologyKey: kubernetes.io/hostname
              weight: 1
              # nodeAffinity:

      securityContext:
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      # initContainers:
      #   # This init container will run post_upgrade which initializes/upgrades the DB as well as collects static files
      #   - name: nautobot-init
      #     image: ghcr.io/nautobot/nautobot:3.1.2
      #     imagePullPolicy: IfNotPresent
      #     securityContext:
      #       allowPrivilegeEscalation: false
      #       capabilities:
      #         drop:
      #           - ALL
      #       readOnlyRootFilesystem: false
      #       runAsGroup: 999
      #       runAsNonRoot: true
      #       runAsUser: 999
      #     args:
      #       - "echo"
      #       - "Nautobot Initialization Done"
      #     env:
      #       - name: NAUTOBOT_DB_USER
      #         valueFrom:
      #           secretKeyRef:
      #             name: nautobot-postgres-18-app
      #             key: "username"
      #       - name: NAUTOBOT_DB_PASSWORD
      #         valueFrom:
      #           secretKeyRef:
      #             name: nautobot-postgres-18-app
      #             key: password
      #       - name: NAUTOBOT_DB_HOST
      #         valueFrom:
      #           secretKeyRef:
      #             name: nautobot-postgres-18-app
      #             key: host
      #       # - name: NAUTOBOT_REDIS_PASSWORD
      #       #   valueFrom:
      #       #     secretKeyRef:
      #       #       name: nautobot-redis
      #       #       key: redis-password
      #     envFrom:
      #       - configMapRef:
      #           name: nautobot-env-configmap
      #       - secretRef:
      #           name: nautobot-env-secret
      #     resources:
      #       limits:
      #         cpu: 1000m
      #         # memory: 8704M
      #       requests:
      #         cpu: 300m
      #         memory: 1280M
      #     volumeMounts:
      #       - name: "nautobot-static"
      #         mountPath: "/opt/nautobot/static"
      #       - name: "git-repos"
      #         mountPath: "/opt/nautobot/git"
      #       - name: "nautobot-config-files"
      #         mountPath: "/opt/nautobot/uwsgi.ini"
      #         subPath: "uwsgi.ini"
      containers:
        - name: nautobot
          tty: true
          image: registry.home.alden.ai/me/nautobot:3.1.2-with-bgp
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
          command:
            - nautobot-server
            - start
            - --ini
            - /opt/nautobot/uwsgi.ini
          resources:
            # limits:
            # cpu: 1000m
            # memory: 8704M
            requests:
              cpu: 100m
              memory: 1280M
          livenessProbe:
            # exec:
            #   command:
            #     - bash
            #     - -c
            #     - nautobot-server health_check
            httpGet:
              path: /health/
              port: http
            failureThreshold: 4
            initialDelaySeconds: 10
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 15
          readinessProbe:
            failureThreshold: 4
            httpGet:
              path: /health/
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          volumeMounts:
            # - name: "nautobot-static"
            #   mountPath: "/opt/nautobot/static"
            - name: "git-repos"
              mountPath: "/opt/nautobot/git"
            - name: "nautobot-config-files"
              mountPath: "/opt/nautobot/uwsgi.ini"
              subPath: "uwsgi.ini"
            - name: "nautobot-config-files"
              mountPath: "/opt/nautobot/nautobot_config.py"
              subPath: "nautobot_config.py"
          ports:
            # - name: "https"
            #   containerPort: 8443
            #
            - name: "http"
              containerPort: 8080

      terminationGracePeriodSeconds: 10
      volumes:
        # - name: "nautobot-static"
        #   emptyDir: {}
        - name: "git-repos"
          emptyDir: {}
        - name: "nautobot-config-files"
          configMap:
            name: nautobot-config-files
