apps/nautobot/server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nautobot-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Home
    gethomepage.dev/name: Nautobot
    gethomepage.dev/href: "https://nautobot.home.alden.ai"
    gethomepage.dev/description: Datacenter Infra Mapping
    gethomepage.dev/icon: netbox.svg
    gethomepage.dev/app: nautobot # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/pod-selector: >-
      app.kubernetes.io/name=nautobot,
      app.kubernetes.io/component=nautobot-server
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - nautobot.home.alden.ai
  rules:
  - backendRefs:
    - name: nautobot
      port: 80
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
